--- a/css/components/notification.css
+++ b/css/components/notification.css
@@ -14,11 +14,11 @@
 }
 
 .toast-header{
-  background: var(--gray-dark);
+  background: var(--gray90);
   color: var(--white);
 }
 .toast-body{
-  background: var(--gray-dark-light);
+  background: var(--gray80);
   color: var(--white);
 }
 
