--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1872,6 +1872,7 @@ pre code {
   background-clip: padding-box;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
+  margin-bottom: 10px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
