--- a/css/components/notification.css
+++ b/css/components/notification.css
@@ -1,3 +1,7 @@
+.toast{
+  cursor: pointer;
+}
+
 .toast.toast-fixed{
   position: fixed;
   z-index: 10;
@@ -18,7 +22,7 @@
   color: var(--white);
 }
 .toast-body{
-  background: var(--gray80);
+  background: var(--gray90);
   color: var(--white);
 }
 
