--- a/css/msuite.css
+++ b/css/msuite.css
@@ -18,14 +18,24 @@ Author: Rohit Nair for Make A Difference, India
 @import "./components/notification.css";
 @import "./components/surveys.css";
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+ @import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i&display=swap');
 /* Ionic Icon Package */
 @import url("https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css");
 @import "./components/icon.css";
 
 
 body{
-  font-family: 'Roboto',sans-serif !important;
-  background: #555;
+  font-family: 'Nunito',sans-serif !important;
+}
+
+body.dark{
+  background: var(--gray80);
+  color: var(--white);
+}
+
+body.white{
+  background: var(--gray10);
+  color: var(--black);
 }
 
 .elements{
@@ -71,7 +81,7 @@ pre{
 }
 
 .code:hover pre{
-  background: var(--80);
+  background: var(--teal50);
   color: #FFF;
   height: 100%;
 }
