Separated Source Files

--- a/css/components/color.css
+++ b/css/components/color.css
@@ -43,6 +43,9 @@
   /* Deep Purple */
   --deep-purple70: #512DA8;
   --deep-purple80: #4527A0;
+
+  /* Deep Orange */
+  --deep-orange80: #D84315;
 }
 
 
