--- a/css/components/button.css
+++ b/css/components/button.css
@@ -10,6 +10,10 @@
   background: var(--cyan80);
 }
 
+.btn-secondary{
+  background: var(--teal80);
+}
+
 .btn-primary:hover{
   background: var(--cyan90);
   box-shadow: 0 0 2px #CCC;
