--- a/css/components/surveys.css
+++ b/css/components/surveys.css
@@ -22,7 +22,7 @@
 .question-area{
   padding: 15px;
   border-radius: 5px;
-  background: var(--gray10);
+  background: var(--grey10);
   margin-bottom: 15px;
   box-shadow: 0 0 2px #CCC;
   color: var(--black);
