--- a/css/msuite.css
+++ b/css/msuite.css
@@ -4,83 +4,81 @@ Author: Rohit Nair for Make A Difference, India
  * Make A Difference: makeadiff.in
  * Github: github.com/makeadiff.in
 */
-
 @import "./bootstrap.css";
 @import "./components/color.css";
 /* @import "./materialize.css"; */
 @import "./components/animation.css";
 @import "./components/input.css";
 @import "./components/button.css";
-
 @import "./components/navbar.css";
 @import "./components/text.css";
 @import "./components/card.css";
 @import "./components/notification.css";
 @import "./components/surveys.css";
-
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i&display=swap');
-@import "./components/footable.standalone.css";
-
+@import "./components/footable.css";
 /* Ionic Icon Package */
 @import url("https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css");
 @import "./components/icon.css";
 
-
-body{
-  font-family: 'Nunito',sans-serif !important;
+body {
+  font-family: 'Nunito', sans-serif !important;
 }
 
-.elements{
+.elements {
   width: 100%;
   padding: 20px;
-
+  background: var(--grey90);
+  margin-bottom: 20px;
 }
 
-/* .elements_div{
-  width: 100%;
-  border: thin solid var(--teal50);
-  padding: 15px;
-} */
-
-.elements:first-child{
+.elements:first-child {
   margin-top: 80px;
 }
 
-pre{
-  background: var(--gray00);
+pre {
+  background: var(--grey00);
+  color: var(--grey70);
   padding: 10px;
   margin: 10px 0;
   height: 100%;
 }
 
-#icons i.icon{
+#icons i.icon {
   height: 30px;
   width: 30px;
 }
 
-@media (max-width:500px){
-  .elements{
+@media (max-width:500px) {
+  .elements {
     padding: 10px;
   }
 }
 
-.code{
+.code {
   cursor: pointer;
   max-height: 200px;
   overflow: hidden;
   transition: all 1s ease-in;
   -moz-transition: all 0.5s ease-in;
+  border-top: thin solid var(--teal);
+  padding-top: 15px;
 }
 
 .code:hover {
-  max-height:500px;
+  max-height: 500px;
   transition: all 1s ease-in;
   -moz-transition: all 0.5s ease-in;
   overflow: scroll;
 }
 
-.code:hover pre{
-  background: var(--teal50);
+.code:hover pre {
+  background: var(--teal);
   color: #FFF;
   height: auto;
+}
+
+span.highlight-code {
+  color: var(--pink80);
+  font-weight: bold;
 }
