--- a/css/msuite.css
+++ b/css/msuite.css
@@ -21,6 +21,10 @@ Author: Rohit Nair for Make A Difference, India
 @import url("https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css");
 @import "./components/icon.css";
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Nunito', sans-serif !important;
 }
@@ -37,7 +41,7 @@ body {
 }
 
 pre {
-  background: var(--grey00);
+  background: var(--grey10);
   color: var(--grey70);
   padding: 10px;
   margin: 10px 0;
@@ -81,4 +85,8 @@ pre {
 span.highlight-code {
   color: var(--pink80);
   font-weight: bold;
+}
+
+.container{
+  margin-top: -60px;
 }
