Adding Vue Documentation

--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,54 @@
 .container{
   margin-top: -60px;
 }
+
+.elements {
+  width: 100%;
+  padding: 20px;
+  background: var(--grey90);
+  margin-bottom: 20px;
+}
+
+.elements:first-child {
+  margin-top: 80px;
+}
+
+
+.code {
+  cursor: pointer;
+  max-height: 200px;
+  overflow: hidden;
+  transition: all 1s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  border-top: thin solid var(--teal);
+  padding-top: 15px;
+}
+
+.code:hover {
+  max-height: 500px;
+  transition: all 1s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  overflow: scroll;
+}
+
+.code:hover pre {
+  background: var(--teal);
+  color: #FFF;
+  height: auto;
+}
+
+span.highlight-code {
+  color: var(--pink80);
+  font-weight: bold;
+}
+
+
+span.mandatory-code {
+  color: var(--cyan);
+  font-weight: bold;
+}
+
+span.comment-code{
+  color: var(--grey);
+  font-style: italic;
+}
