--- a/css/components/input.css
+++ b/css/components/input.css
@@ -37,3 +37,20 @@ input[type="radio"]:checked{
 input[type="radio"]:checked:after {
   background: var(--cyan70);
 }
+
+input[type="text"],
+input[type="email"],
+input[type="phone"],
+input[type="date"],
+textarea{
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    font-family: Nunito;
+    color: #2C3E50;
+    font-size: 13px;
+    background: none;
+}
