--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -1,3 +1,4 @@
+/* General Setting Applicable for All Themes */
 
 .navbar{
   position: sticky;
@@ -5,21 +6,8 @@
   margin-bottom: 20px;
 }
 
-.navbar-dark{
-  background: var(--grey90);
-  border-bottom: 2px solid var(--mad-red);
-}
-
-.navbar-light{
-  background: var(--grey);
-}
-
-.navbar-dark .navbar-toggler{
+.navbar-toggler{
   border: none;
-}
-
-.navbar-dark .navbar-toggler-icon {
-	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 .navbar .profile_image{
@@ -32,6 +20,10 @@
   background: url("https://picsum.photos/seed/picsum/40/40");
 }
 
+.dropdown-menu{
+  border: none;
+}
+
 .navbar .profile_image img{
   width: 100%;
 }
@@ -42,14 +34,87 @@
 
 .navbar span.user_profile{
   font-size: 10px;
-  color: var(--grey10);
   font-style: italic;
   padding: 0 10px 0 0;
+  /* max-width: 200px; */
+  /* max-height: 14px; */
+  overflow-x: hidden;
 }
 
-.navbar-dark span.user_name{
+/* .navbar span.user_profile:hover{
+  max-height: 60px;
+  max-width: auto;
+} */
+
+/* Dark Theme Elements Styling--------------------------------------------------------------------- */
+.dark .navbar{
+  background: var(--grey90);
+  border-bottom: 2px solid var(--mad-red);
+}
+
+.dark .navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.dark span.user_name{
   color: var(--white);
 }
+
+.dark span.user_name{
+  color: var(--white);
+}
+
+.dark .dropdown-menu{
+  background: var(--grey70);
+}
+
+.dark .dropdown-item{
+  color: var(--white);
+}
+
+.dark .navbar span.user_profile{
+  color: var(--grey10);
+}
+
+.dark .navbar a{
+  color: var(--white);
+}
+
+.dark a.navbar-brand{
+  color: var(--cyan);
+}
+
+/* Light Theme Elements Styling--------------------------------------------------------------------- */
+
+.light .navbar{
+  background: var(--grey00);
+  border-bottom: 2px solid var(--mad-red);
+}
+
+.light span.user_name{
+  color: var(--grey);
+}
+
+.light .navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(13, 13, 13, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.light .dropdown-menu{
+  background: var(--grey20);
+}
+
+.light .dropdown-item{
+  color: var(--grey90);
+}
+
+.light .navbar span.user_profile{
+  color: var(--grey10);
+}
+
+
+
+/* -------- End */
+
 
 .navbar-light span.user_name{
   color: var(--grey90);
