--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,25 @@
 
-.container{
-  margin-top: -60px;
-}
-
-.elements {
+.elements{
   width: 100%;
   padding: 20px;
-  background: var(--grey90);
   margin-bottom: 20px;
 }
 
-.elements:first-child {
-  margin-top: 80px;
+.dark pre {
+  background: var(--grey10);
+  color: var(--grey70);
+  padding: 10px;
+  margin: 10px 0;
+  height: 100%;
 }
 
+.light pre {
+  background: var(--grey10);
+  color: var(--grey70);
+  padding: 10px;
+  margin: 10px 0;
+  height: 100%;
+}
 
 .code {
   cursor: pointer;
