--- a/css/index.css
+++ b/css/index.css
@@ -59,3 +59,17 @@ span.comment-code{
   color: var(--grey);
   font-style: italic;
 }
+
+.version{
+  background: var(--red80);
+  color: var(--white);
+}
+
+.dark .version a, .light .version a, .light .theme a, .dark .version a, {
+  color: var(--white);
+}
+
+.theme{
+  background: var(--cyan);
+  color: var(--white);
+}
