--- a/css/components/forms.css
+++ b/css/components/forms.css
@@ -8,30 +8,25 @@
 
 /* Progress Bar on Top of the Form */
 .progressbar {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   overflow: hidden;
-  counter-reset: step;
 }
 
 .progressbar li {
   list-style-type: none;
   color: var(--white));
   text-transform: uppercase;
-  font-size: 9px;
-  width: 16%;
   float: left;
   position: relative;
   letter-spacing: 1px;
 }
 
 .progressbar li:before {
-  content: counter(step);
-  counter-increment: step;
-  width: 24px;
-  height: 24px;
-  line-height: 26px;
+  content: '';
+  width: 14px;
+  height: 14px;
+  line-height: 14px;
   display: block;
-  font-size: 12px;
   color: var(--mad-red);
   background: var(--white);
   border-radius: 25px;
@@ -41,16 +36,15 @@
 .progressbar li:after {
   content: '';
   width: 100%;
-  height: 2px;
+  height: 6px;
   background: var(--white);
   position: absolute;
   left: -50%;
-  top: 9px;
+  top: 3px;
   z-index: -1; /*put it behind the numbers*/
 }
 
 .progressbar li:first-child:after {
-  /*connector not needed before the first step*/
   content: none;
 }
 
@@ -88,7 +82,7 @@ select::-ms-expand {
 .select {
   position: relative;
   display: flex;
-  width: 200px;
+  width: 300px;
   line-height: 3;
   background: var(--grey60);
   overflow: visible;
@@ -166,10 +160,6 @@ select {
   margin-top: 10px;
 }
 
-.mform .col-sm-3, .mform .col-sm-2, .mform .col-sm-12{
-  text-align: left;
-  padding-left: 40px;
-}
 
 .mform .col-sm-3 input, .mform .col-sm-2 input, .mform .col-sm-12 input{
   text-align: left;
@@ -188,6 +178,7 @@ select {
     box-sizing: border-box;
     /*stacking fieldsets above each other*/
     position: relative;
+    margin-bottom: 20px;
 }
 
 /*Hide all except first fieldset*/
@@ -211,20 +202,6 @@ select {
   /* margin-right: 20px; */
 }
 
-.mform input:focus, .mform textarea:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    border: 1px solid var(--mad-red);
-    outline-width: 0;
-    transition: All 0.5s ease-in;
-    -webkit-transition: All 0.5s ease-in;
-    -moz-transition: All 0.5s ease-in;
-    -o-transition: All 0.5s ease-in;
-}
-
-.mform 
-
 .mform .action-button-previous#update{
     width: 200px;
     margin: 0px 5px;
@@ -237,23 +214,24 @@ select {
 
 
 label.error{
-  display: inline;
+  display: absolute;
   /* background: #F00; */
   color:var(--red);
   font-size: 13px;
   font-weight: 700;
-  float: right;
   padding: 2px;
-  margin-top: -10px;
-  margin-right: 10px;
-}
-
-label{
-  font-weight: 500;
-  max-width: 80% !important;
+  right: 10px;
 }
 
 label.label-box{
   width: 100%;
   font-weight: 400;
+}
+
+
+@media and (max-width:500px){
+  .select {
+    width: 100%;
+  }
+
 }
