--- a/css/components/button.css
+++ b/css/components/button.css
@@ -25,23 +25,23 @@
 }
 
 .file-button {
-    width: 150px;
-    background: #512DA8;
-    font-weight: bold;
-    color: var(--white);
-    border: 0 none;
-    border-radius: 5px;
-    cursor: pointer;
-    padding: 10px 5px;
-    text-align: center;
+  width: 150px;
+  background: #512DA8;
+  font-weight: bold;
+  color: var(--white);
+  border: 0 none;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 10px 5px;
+  text-align: center;
 }
 
 .file-button:disabled {
-    width: 150px;
-    background: #CCC;
-    font-weight: bold;
-    padding: 10px 5px;
-    margin: 10px 5px;
+  width: 150px;
+  background: #CCC;
+  font-weight: bold;
+  padding: 10px 5px;
+  margin: 10px 5px;
 }
 
 .button {
@@ -50,7 +50,7 @@
   color: var(--white);
   font-size: 1.1rem;
   margin: 10px 0;
-  padding: 15px 5px;
+  padding: 6px 5px;
   min-width: 300px;
   height: 40px;
   cursor: pointer;
@@ -89,4 +89,11 @@
 }
 .button:focus {
   outline: none;
+}
+
+
+@media (max-width:500px){
+  .button{
+    min-width: 100%;
+  }
 }
