--- a/css/components/input.css
+++ b/css/components/input.css
@@ -166,8 +166,8 @@ body *::before {
   color: #b3b3b3;
   font-size: 1rem;
   font-weight: normal;
-  -webkit-transition: all 0.28s ease;
-  transition: all 0.28s ease;
+  -webkit-transition: all 0.10s ease;
+  transition: all 0.10s ease;
 }
 .form-group .bar {
   position: relative;
@@ -182,8 +182,8 @@ body *::before {
   bottom: -0.0625rem;
   position: absolute;
   background: #337ab7;
-  -webkit-transition: left 0.28s ease, width 0.28s ease;
-  transition: left 0.28s ease, width 0.28s ease;
+  -webkit-transition: left 0.10s ease, width 0.10s ease;
+  transition: left 0.10s ease, width 0.10s ease;
   z-index: 2;
 }
 .form-group input,
@@ -197,8 +197,8 @@ body *::before {
   line-height: 1.9;
   width: 100%;
   color: transparent;
-  -webkit-transition: all 0.28s ease;
-  transition: all 0.28s ease;
+  -webkit-transition: all 0.10s ease;
+  transition: all 0.10s ease;
   box-shadow: none;
 }
 .form-group input[type="file"] {
@@ -290,10 +290,10 @@ body *::before {
   margin: 0.25rem;
   width: 1rem;
   height: 1rem;
-  -webkit-transition: -webkit-transform 0.28s ease;
-  transition: -webkit-transform 0.28s ease;
-  transition: transform 0.28s ease;
-  transition: transform 0.28s ease, -webkit-transform 0.28s ease;
+  -webkit-transition: -webkit-transform 0.10s ease;
+  transition: -webkit-transform 0.10s ease;
+  transition: transform 0.10s ease;
+  transition: transform 0.10s ease, -webkit-transform 0.10s ease;
   border-radius: 50%;
   border: 0.125rem solid currentColor;
 }
@@ -315,8 +315,8 @@ body *::before {
 }
 
 .checkbox {
-  margin-top: 3rem;
-  margin-bottom: 1rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .checkbox .helper {
   color: #999;
@@ -328,8 +328,8 @@ body *::before {
   z-index: 0;
   border: 0.125rem solid currentColor;
   border-radius: 0.0625rem;
-  -webkit-transition: border-color 0.28s ease;
-  transition: border-color 0.28s ease;
+  -webkit-transition: border-color 0.10s ease;
+  transition: border-color 0.10s ease;
 }
 .checkbox .helper::before, .checkbox .helper::after {
   position: absolute;
@@ -341,8 +341,8 @@ body *::before {
           transform-origin: left top;
   border-radius: 0.25rem;
   content: '';
-  -webkit-transition: opacity 0.28s ease, height 0s linear 0.28s;
-  transition: opacity 0.28s ease, height 0s linear 0.28s;
+  -webkit-transition: opacity 0.10s ease, height 0s linear 0.10s;
+  transition: opacity 0.10s ease, height 0s linear 0.10s;
   opacity: 0;
 }
 .checkbox .helper::before {
@@ -366,16 +366,16 @@ body *::before {
 }
 .checkbox input:checked ~ .helper::after, .checkbox input:checked ~ .helper::before {
   opacity: 1;
-  -webkit-transition: height 0.28s ease;
-  transition: height 0.28s ease;
+  -webkit-transition: height 0.10s ease;
+  transition: height 0.10s ease;
 }
 .checkbox input:checked ~ .helper::after {
   height: 0.5rem;
 }
 .checkbox input:checked ~ .helper::before {
   height: 1.2rem;
-  -webkit-transition-delay: 0.28s;
-          transition-delay: 0.28s;
+  -webkit-transition-delay: 0.10s;
+          transition-delay: 0.10s;
 }
 
 .radio + .radio,
@@ -397,4 +397,71 @@ body *::before {
   background: #d9534f;
   left: 0;
   width: 100%;
+}
+
+
+
+/* Select Dropdown */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: var(--grey30);
+  background-image: none;
+}
+
+
+
+
+/* Remove IE arrow */
+select::-ms-expand {
+  display: none;
+}
+
+/* Custom Select */
+.select {
+  position: relative;
+  display: flex;
+  min-width: 300px;
+  line-height: 3;
+  background: var(--grey60);
+  overflow: visible;
+  border-radius: .25em;
+  margin-bottom: 15px;
+}
+
+select {
+  flex: 1;
+  padding: 0 .5em;
+  color: var(--grey90);
+  cursor: pointer;
+}
+/* Arrow */
+.select::after {
+  content: '\25BC';
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  background: var(--grey60);
+  cursor: pointer;
+  pointer-events: none;
+  -webkit-transition: .25s all ease;
+  -o-transition: .25s all ease;
+  transition: .25s all ease;
+  color: var(--white);
+}
+/* Transition */
+.select:hover::after {
+  background: var(--mad-red);
+}
+
+@media (max-width:500px){
+  .select {
+    min-width: 100%;
+  }
 }
