--- a/css/components/button.css
+++ b/css/components/button.css
@@ -46,16 +46,17 @@
 
 .button {
   position: relative;
+  border: none;
   background: var(--cyan70);
   color: var(--white);
   font-size: 1.1rem;
   margin: 10px 0;
   padding: 6px 5px;
-  min-width: 300px;
+  min-width: 250px;
   height: 40px;
   cursor: pointer;
-  -webkit-transition: background-color 0.28s ease, color 0.28s ease, box-shadow 0.28s ease;
-  transition: background-color 0.28s ease, color 0.28s ease, box-shadow 0.28s ease;
+  -webkit-transition: background-color 0.10s ease, color 0.10s ease, box-shadow 0.10s ease;
+  transition: background-color 0.10s ease, color 0.10s ease, box-shadow 0.10s ease;
   overflow: hidden;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
@@ -74,15 +75,21 @@
   -webkit-transform: translate(-50%, -50%) scale(0);
           transform: translate(-50%, -50%) scale(0);
 }
+
+.button span{
+  position: relative;
+  z-index: 1;
+}
+
 .button:hover {
   color: var(--white);
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
 }
 .button:active::before, .button:focus::before {
-  -webkit-transition: opacity 0.28s ease 0.364s, -webkit-transform 1.12s ease;
-  transition: opacity 0.28s ease 0.364s, -webkit-transform 1.12s ease;
-  transition: transform 1.12s ease, opacity 0.28s ease 0.364s;
-  transition: transform 1.12s ease, opacity 0.28s ease 0.364s, -webkit-transform 1.12s ease;
+  -webkit-transition: opacity 0.10s ease 0.364s, -webkit-transform 1.12s ease;
+  transition: opacity 0.10s ease 0.364s, -webkit-transform 1.12s ease;
+  transition: transform 1.12s ease, opacity 0.10s ease 0.364s;
+  transition: transform 1.12s ease, opacity 0.10s ease 0.364s, -webkit-transform 1.12s ease;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
   opacity: 0;
