--- a/css/msuite.css
+++ b/css/msuite.css
@@ -20,6 +20,7 @@ Author: Rohit Nair for Make A Difference, India
 @import "./components/footable.css";
 /* Ionic Icon Package */
 @import url("https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css");
+/* Documentation can be found at https://ionicons.com/v4/ */
 @import "./components/icon.css";
 @import "./components/forms.css";
 
@@ -43,6 +44,5 @@ body {
 }
 
 .page{
-  width: 80%;
-  margin-left: 20%;
+  width: 100%;
 }
